--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.EZInvoice"
         tools:targetApi="31">
         <activity
+            android:name=".Business_Info"
+            android:exported="false"/>
+
+        <activity
+            android:name=".Sale"
+            android:exported="false" />
+        <activity
             android:name=".ForgotPassword"
             android:exported="false" />
         <activity
